compiler/src/test/resources/golden/errors/char_empty.dawn
pub fn main() -> Unit !io = println(to_string(''))
