compiler/src/test/resources/golden/errors/char_empty.err
error: empty character literal
  --> char_empty.dawn:1:47
  |
1 | pub fn main() -> Unit !io = println(to_string(''))
  |                                               ^^
  = hint: a character literal holds exactly one code point, like 'a' or '\n'
error: expected an expression, found `<eof>`
  --> char_empty.dawn:2:1
  |
2 | 
  | ^
